# dlibc

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
posix-regex/src/: compile.rs  matcher.rs
src/: c_str.rs  c_vec.rs  cxa.rs  db.rs  fs.rs  lib.rs  macros.rs
src/arch/x86_64/: x86_64-unknown-dragonos.json
src/c/: dlmalloc.c  fcntl.c  ptrace.c  stack_chk.c  unistd.c
src/crt0/: Cargo.toml
src/crt0/src/: lib.rs
src/crti/: Cargo.toml
src/crti/src/: lib.rs
src/crtn/: Cargo.toml
src/crtn/src/: lib.rs
src/header/: mod.rs
src/header/_aio/: cbindgen.toml  mod.rs
src/header/_fenv/: cbindgen.toml
src/header/_template/: cbindgen.toml
src/header/assert/: cbindgen.toml
src/header/ctype/: cbindgen.toml
src/header/dirent/: cbindgen.toml
src/header/dlfcn/: cbindgen.toml
src/header/errno/: cbindgen.toml
src/header/fcntl/: cbindgen.toml  dragonos.rs  mod.rs
src/header/float/: cbindgen.toml
src/header/fnmatch/: cbindgen.toml
src/header/getopt/: cbindgen.toml
src/header/grp/: cbindgen.toml
src/header/inttypes/: cbindgen.toml
src/header/libgen/: cbindgen.toml
src/header/limits/: cbindgen.toml
src/header/locale/: cbindgen.toml
src/header/netdb/: cbindgen.toml  mod.rs
src/header/pwd/: cbindgen.toml  dragonos.rs
src/header/regex/: cbindgen.toml
src/header/semaphore/: cbindgen.toml
src/header/setjmp/: mod.rs
src/header/sgtty/: cbindgen.toml
src/header/signal/: cbindgen.toml  dragonos.rs  mod.rs
src/header/stdio/: cbindgen.toml
src/header/stdlib/: cbindgen.toml
src/platform/: mod.rs  pte.rs  rlb.rs  types.rs
(+37 files in other folders)
