[package]
name = "dlibc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dlibc"
crate-type = ["staticlib"]

[workspace]
members = ["src/crt0", "src/crti", "src/crtn"]
# exclude = ["tests"]

[build-dependencies]
cbindgen = "0.24.3"
cc = "1.0.25"

[dependencies]
cbitset = "0.2.0"
core_io = { path = "../core_io" }
goblin = "0.6.1"
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
memoffset = "0.8.0"
posix-regex = "0.1.1"
rand = { version = "0.5.5", default-features = false }
memchr = { version = "2.2.0", default-features = false }
plain = "0.2"
unicode-width = "0.1"